avances en practico 2

--- a/htmlsitioweb-practico-dos/about.html
+++ b/htmlsitioweb-practico-dos/about.html
@@ -3,26 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>🧉mateuchi🧉</title>
 </head>
 <body>
     <header>
         <h1>Sobre mi</h1>
         <p>Este es un pequeño apartado para darnos a conocer</p>
     </header>
+    <br><hr>
     <section>
         <div>
             Un sábado después de un fútbol 5 entre amigos, barajamos la idea de tener un emprendimiento. Tras varias idas y vueltas, decidimos que nuestro amor por el mate sería el corazón de nuestro proyecto. Nos dimos cuenta de que compartíamos una pasión por esta tradición y queríamos ofrecer productos que mejoraran la experiencia de tomar mate para todos los entusiastas como nosotros.
         </div>
+        <br>
         <div>
             Empezamos por investigar los mejores mates y accesorios disponibles, buscando proveedores que compartieran nuestros valores de calidad y autenticidad. No fue un camino fácil, pero nuestro entusiasmo y determinación nos mantuvieron enfocados. Cada fin de semana nos reuníamos para discutir ideas, probar nuevos productos y planificar los siguientes pasos.
         </div>
+        <br>
         <div>
             Finalmente, logramos consolidar nuestra visión y lanzar nuestro primer lote. La respuesta de nuestra comunidad fue increíble y nos motivó a seguir adelante. Hoy, estamos orgullosos de ofrecer una selección cuidadosamente curada de mates, bombillas y accesorios que hemos probado y aprobado personalmente (nos asqueamos de tomar mate ajajaj).
         </div>
+        <br>
         <div>
             Gracias por acompañarnos en esta aventura matera. ¡Siempre con montañita🧉!
         </div>
     </section>
+    <hr>
+    <footer>
+        <a href="index.html">Volver atras.</a>
+    </footer>
 </body>
 </html>
