--- a/htmlsitioweb-practico-dos/index.html
+++ b/htmlsitioweb-practico-dos/index.html
@@ -12,7 +12,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="about.html">Informacion Sobre mi.</a></li>
+            <li><a href="about.html">Info sobre nosotros.</a></li>
             <li><a href="servicios.html">Servicios y data.</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
