--- a/htmlsitioweb-practico-dos/contacto.html
+++ b/htmlsitioweb-practico-dos/contacto.html
@@ -6,6 +6,32 @@
     <title>🧉mateuchi🧉</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Contactanos</h1>
+    </header>
+    <section>
+        <form action="nada">
+            <p>Ingrese su nombre
+                <input type="text">
+            </p>
+            <p>Ingrese su mail
+                <input type="text">
+            </p>
+            <p>Mensaje (Se feliz campeon, escribi todo lo que quieras)
+                <br>
+                <textarea rows="4" cols="50"></textarea>
+                <br>
+                <button type="button">Enviar</button>
+            </p>
+        </form>
+    </section>
+    <footer>
+        <ul>
+            <li>ezequielmartinchavez@gmail.com</li>
+            <li>cel:+54 11 2331 4364.</li>
+            <li>Ubi. Vicente Lopez, Florida, Bs As.</li>
+        </ul>
+        <a href="index.html">Volver atras.</a>
+    </footer>
 </body>
 </html>
