--- a/experimentos-mios/grid/index.html
+++ b/experimentos-mios/grid/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="conteiner">
+
+        <div>Tx1</div>
+
+        <div>Tx2</div>
+
+        <div>Tx3</div>
+
+        <div>Tx4</div>
+
+    </section>
 </body>
 </html>
