odio el portafolio

--- a/experimentos-mios/grid/index.html
+++ b/experimentos-mios/grid/index.html
@@ -9,14 +9,17 @@
 <body>
     <section class="conteiner">
 
-        <div>Tx1</div>
+        <div class="element element1">Nav</div>
 
-        <div>Tx2</div>
+        <div class="element element2">header</div>
 
-        <div>Tx3</div>
+        <div class="element element3">productos</div>
 
-        <div>Tx4</div>
+        <div class="element element4">servicios</div>
 
+        <div class="element element5">publicidad</div>
+
+        <div class="element element6">footer</div>
     </section>
 </body>
 </html>
