--- a/html-practico-siete/index.html
+++ b/html-practico-siete/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💼EzeChavez💼</title>
+    <!--Links Css mios-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="form.css">
     <link rel="stylesheet" href="sobre-mi.css">
+    <link rel="stylesheet" href="copyright.css">
+    <!--Links de Bootstrap-->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -17,18 +20,23 @@
             <h3 class="nombre">Ezequiel Chavez</h3>
         </a>
         <nav>
-            <a href="">Inicio</a>
             <a href="#sobre-mi">Sobre Mi</a>
             <a href="#contacto">Contacto</a>
-            <a href="">Copyright</a>
+            <a href="#copyright">Copyright</a>
         </nav>
     </header>
     <section id="sobre-mi">
-        <div id="text-sobre-mi">
-            <h2>Sobre Mi</h2>
-            <hr>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste maiores tenetur reprehenderit accusantium sint! Cumque,           blanditiis, doloribus ipsa minima fugit quaerat est ullam incidunt modi molestias repudiandae necessitatibus delectus distinctio.
-            Similique magnam doloribus, repellat impedit modi provident, quisquam possimus a commodi culpa veritatis distinctio labore excepturi ipsam natus itaque reiciendis, blanditiis earum! Placeat quae autem accusamus eius doloremque quo at!</p>
+        <div id="text-sobre-mi">   
+            <div id="h2-sobre-mi">
+                <h2>Sobre Mi</h2>
+                <hr>
+                <img src="./img/yo.jpg" alt="Avatar" style="width:auto" id="img-sobre-mi">
+                <div class="caja">
+                  <h4>Ezequiel</h4> 
+                  <p>Estudiante</p> 
+                </div>
+            </div>
+            <p id="p-sobre-mi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste maiores tenetur reprehenderit accusantium sint! Cumque,blanditiis, doloribus ipsa minima fugit quaerat est ullam incidunt modi molestias repudiandae necessitatibus delectus distinctio.Similique magnam doloribus, repellat impedit modi provident, quisquam possimus a commodi culpa veritatis distinctio labore excepturi ipsam natus itaque reiciendis, blanditiis earum! Placeat quae autem accusamus eius doloremque quo at!</p>
         </div>
         <div class="container">
             <div class="row">
@@ -87,6 +95,26 @@
                 <button type="submit" class="btn custom-btn w-100">Enviar</button>
             </form>
         </div>
-    </section>    
+    </section>
+    <section id="copyright">
+        <footer class="footer">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <p id="text-p">&copy; Derechos de autor 2024 - Ezequiel Chavez
+                    <br>16/06/2024
+                  </p>
+                </div>
+                <div class="col-md-6">
+                  <div class="redes-sociales">
+                    <!-- <a href="#">Facebook</a> -->
+                    <a href="https://x.com/EzeMChavez" target="_blank">Twitter</a>
+                    <a href="https://www.instagram.com/ezechavezz_" target="_blank">Instagram</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </footer>
+    </section>
 </body>
 </html>
