--- a/html-practico-siete/index.html
+++ b/html-practico-siete/index.html
@@ -43,10 +43,11 @@
                 <div class="col">
                     <div class="container mt-5">
                         <div class="card" style="width: 18rem;">
-                          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Placeholder Image">
+                          <img src="./img/panchito.jpg" class="card-img-top" alt="Placeholder Image" style="width: 286px; height: 150px;">
+                          <a href="https://666f227b633cce285e169479--guileless-druid-9a5304.netlify.app/" class="btn btn-primary" style="margin: 10px;" target="_blank">Panchito</a>
                           <div class="card-body">
-                            <h5 class="card-title">Título de la Card</h5>
-                            <p class="card-text">Un poco de texto de ejemplo para llenar la card y mostrar cómo se ve.</p>
+                            <h5 class="card-title">El maldito panchito</h5>
+                            <p class="card-text">Un pancho hecho a base de bordes</p>
                           </div>
                         </div>
                       </div>
@@ -54,10 +55,11 @@
                 <div class="col">
                     <div class="container mt-5">
                         <div class="card" style="width: 18rem;">
-                          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Placeholder Image">
+                          <img src="./img/historia.jpg" class="card-img-top" alt="Placeholder Image" style="width: 286px; height: 150px;">
+                          <a href="https://666f25489e4f4c652361f34e--idyllic-mochi-654f3b.netlify.app/" class="btn btn-primary" style="margin: 10px;" target="_blank">Una historia</a>
                           <div class="card-body">
-                            <h5 class="card-title">Título de la Card</h5>
-                            <p class="card-text">Un poco de texto de ejemplo para llenar la card y mostrar cómo se ve.</p>
+                            <h5 class="card-title">Historia</h5>
+                            <p class="card-text">Adentrate en la historia de Elena.</p>
                           </div>
                         </div>
                       </div>
@@ -65,10 +67,11 @@
                 <div class="col">
                     <div class="container mt-5">
                         <div class="card" style="width: 18rem;">
-                          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Placeholder Image">
+                          <img src="./img/primera.jpg" class="card-img-top" alt="Placeholder Image" style="width: 286px; height: 150px;">
+                          <a href="https://nimble-yeot-14449d.netlify.app/" class="btn btn-primary" style="margin: 10px;" target="_blank">Mi primera pagina</a>
                           <div class="card-body">
-                            <h5 class="card-title">Título de la Card</h5>
-                            <p class="card-text">Un poco de texto de ejemplo para llenar la card y mostrar cómo se ve.</p>
+                            <h5 class="card-title">Mi debut</h5>
+                            <p class="card-text">Esta fue mi primera pagina con css.</p>
                           </div>
                         </div>
                       </div>
@@ -101,7 +104,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-6">
-                  <p id="text-p">&copy; Derechos de autor 2024 - Ezequiel Chavez
+                  <p id="text-p">&copy; Derechos de autor 2024 - Ezequiel Chávez
                     <br>16/06/2024
                   </p>
                 </div>
