practico seis terminado

--- a/html-practico-seis/index.html
+++ b/html-practico-seis/index.html
@@ -22,7 +22,23 @@
     </div>
     <div class="background-bottom">
         <section class="container">
+            <div><a href="https://minecraft.wiki/w/Mushroom_Fields"><img src="./img/01-Mushroom-Fields.webp" alt="Mushroom-Fields" class="foto"></a></div>
+            <div><a href="https://minecraft.wiki/w/Cherry_Grove"><img src="./img/02-Cherry-Grove.webp" alt="Crerry Grove" class="foto"></a></div>
+            <div><a href="https://minecraft.wiki/w/Jungle"><img src="./img/03-Jungle.webp" alt="Jungle" class="foto"></a></div>
+            <div><a href="https://minecraft.wiki/w/Dark_Forest"><img src="./img/04-Dark_Forest.webp" alt="Dark Forest" class="foto"></a></div>
+            <div><a href="https://minecraft.wiki/w/Jungle#Bamboo_Jungle"><img src="./img/05-Bamboo_Jungle.webp" alt="Bamboo Jungle" class="foto"></a></div>
+            <div><a href="https://minecraft.wiki/w/Mangrove_Swamp"><img src="./img/06-Mangrove-Swamp.webp" alt="Mangrove Swamp" class="foto"></a></div>
+            <div><a href="https://minecraft.wiki/w/Deep_Dark"><img src="./img/07-Deep-Dark.webp" alt="Deep Dark" class="foto"></a></div>
+            <div><a href="https://minecraft.wiki/w/Mountains#Snowy_slopes"><img src="./img/08-Snowy-Slopes.webp" alt="Snowy Slopes" class="foto"></a></div>
+            <div><a href="https://minecraft.wiki/w/Plains#Sunflower_Plains"><img src="./img/09-Sunflower-Plains.webp" alt="Sunflower Plains" class="foto"></a></div>    
         </section>
     </div>
+    <footer>
+        <h2>&copy; Copyright</h2>
+        <div>
+            Las imagnes estan sacadas de las paginas a la que sos redirigido al tocar alguna.
+            <br>Todos los derechos reservados son para ellos.
+        </div>
+    </footer>
 </body>
 </html>
