--- a/experimentos-mios/dom/index.html
+++ b/experimentos-mios/dom/index.html
@@ -13,7 +13,7 @@
     <div class="textito">
         <p>Hola, Mundo!</p>
     </div>      
-
+    <button id="boton">Clickeame</button>
     <script src="script.js"></script>
 </body>
 </html>
