Ejercicio mas de 27

--- a/10-js-practico-diez/index.html
+++ b/10-js-practico-diez/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ejercicio-06-duplicar-numeros.js"></script>
+    <script src="ejercicio-07-mas27.js"></script>
 </body>
 </html>
