--- a/10-js-practico-diez/index.html
+++ b/10-js-practico-diez/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ejercicio-09-orden.js"></script>
+    <script src="ejercicio-10-tiendaOnline.js"></script>
 </body>
 </html>
