--- a/11-js-practico-once/03-magico/index.html
+++ b/11-js-practico-once/03-magico/index.html
@@ -6,11 +6,15 @@
     <title>🐺MAGIA🐺</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<Header>🐺🐺🐺🐺🐺🐺🐺🐺🐺</Header>
 <body>
-    <div id="magia">
-        <img src="./img/Sin título.jpg" alt="Lobo Solitario">
-    </div>
+    <Header>🐺🐺🐺🐺🐺🐺🐺🐺🐺</Header>
+    <section>
+        <div></div>
+        <div id="magia">
+            <img src="./img/Sin título.jpg" alt="Lobo Solitario">
+        </div>
+        <div></div>
+    </section>
 <script src="script.js"></script>
 </body>
 </html>
